src/parser.output
   0  $accept : %entry% $end

   1  program : constituents EOF

   2  constituents :
   3               | constituents include_stmt
   4               | constituents sdecl
   5               | constituents cdecl
   6               | constituents fdecl

   7  include_stmt : INCLUDE STRING_LIT

   8  fdecl : DEF ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE

   9  sdecl : SPEC TYPE_ID LBRACE RBRACE

  10  cdecl : CLASS TYPE_ID ASSIGN LBRACE cbody RBRACE

  11  cbody :
  12        | cbody field
  13        | cbody cfdecl

  14  cfdecl : scope DEF ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE

  15  datatype : type_tag
  16           | array_type
  17           | function_type

  18  type_tag : primitive
  19           | object_type

  20  primitive : INT
  21            | FLOAT
  22            | CHAR
  23            | BOOL
  24            | UNIT

  25  object_type : TYPE_ID

  26  array_type : type_tag LBRACKET brackets RBRACKET

  27  brackets :
  28           | brackets RBRACKET LBRACKET

  29  function_type : LPAREN formal_dtypes_list RPAREN ARROW datatype
  30                | datatype ARROW datatype

  31  field : scope VAR ID COLON datatype SEMI

  32  formal_dtypes_list : formal_dtype
  33                     | formal_dtypes_list COMMA formal_dtype

  34  formal_dtype : datatype

  35  formals_opt :
  36              | formal_list

  37  formal_list : formal
  38              | formal_list COMMA formal

  39  formal : ID COLON datatype

  40  actuals_opt :
  41              | actuals_list

  42  actuals_list : expr
  43               | actuals_list COMMA expr

  44  scope :
  45        | PUBLIC
  46        | PRIVATE

  47  literals : INT_LIT
  48           | FLOAT_LIT
  49           | TRUE
  50           | FALSE
  51           | CHAR_LIT
  52           | STRING_LIT
  53           | function_literal
  54           | ID
  55           | THIS

  56  function_literal : ANON LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE

  57  bracket_args : LBRACKET expr
  58               | bracket_args RBRACKET LBRACKET expr

  59  stmts : stmt_list

  60  stmt_list : stmt
  61            | stmt_list stmt

  62  stmt : expr SEMI
  63       | RETURN SEMI
  64       | RETURN expr SEMI
  65       | LBRACE stmts RBRACE
  66       | IF LPAREN expr RPAREN stmt ELSE stmt
  67       | WHILE LPAREN expr RPAREN stmt
  68       | VAR ID COLON datatype SEMI
  69       | VAR ID ASSIGN expr SEMI
  70       | VAR ID COLON datatype ASSIGN expr SEMI
  71       | IF LPAREN expr RPAREN stmt
  72       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt

  73  expr_opt :
  74           | expr

  75  expr : literals
  76       | expr INCREMENT
  77       | expr DECREMENT
  78       | expr PLUS expr
  79       | expr MINUS expr
  80       | expr TIMES expr
  81       | expr DIVIDE expr
  82       | expr MODULO expr
  83       | expr EQ expr
  84       | expr NEQ expr
  85       | expr LT expr
  86       | expr LEQ expr
  87       | expr GT expr
  88       | expr GEQ expr
  89       | expr AND expr
  90       | expr OR expr
  91       | expr ASSIGN expr
  92       | expr DOT expr
  93       | expr bracket_args RBRACKET
  94       | MINUS expr
  95       | NOT expr
  96       | LPAREN expr RPAREN
  97       | ID LPAREN actuals_opt RPAREN
  98       | type_tag bracket_args RBRACKET LPAREN RPAREN

  99  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (99)
	constituents : .  (2)

	.  reduce 2

	program  goto 3
	constituents  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (99)

	.  reduce 99


state 4
	program : constituents . EOF  (1)
	constituents : constituents . include_stmt  (3)
	constituents : constituents . sdecl  (4)
	constituents : constituents . cdecl  (5)
	constituents : constituents . fdecl  (6)

	SPEC  shift 5
	CLASS  shift 6
	DEF  shift 7
	EOF  shift 8
	INCLUDE  shift 9
	.  error

	include_stmt  goto 10
	sdecl  goto 11
	cdecl  goto 12
	fdecl  goto 13


state 5
	sdecl : SPEC . TYPE_ID LBRACE RBRACE  (9)

	TYPE_ID  shift 14
	.  error


state 6
	cdecl : CLASS . TYPE_ID ASSIGN LBRACE cbody RBRACE  (10)

	TYPE_ID  shift 15
	.  error


state 7
	fdecl : DEF . ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (8)

	ID  shift 16
	.  error


state 8
	program : constituents EOF .  (1)

	.  reduce 1


state 9
	include_stmt : INCLUDE . STRING_LIT  (7)

	STRING_LIT  shift 17
	.  error


state 10
	constituents : constituents include_stmt .  (3)

	.  reduce 3


state 11
	constituents : constituents sdecl .  (4)

	.  reduce 4


state 12
	constituents : constituents cdecl .  (5)

	.  reduce 5


state 13
	constituents : constituents fdecl .  (6)

	.  reduce 6


state 14
	sdecl : SPEC TYPE_ID . LBRACE RBRACE  (9)

	LBRACE  shift 18
	.  error


state 15
	cdecl : CLASS TYPE_ID . ASSIGN LBRACE cbody RBRACE  (10)

	ASSIGN  shift 19
	.  error


state 16
	fdecl : DEF ID . ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (8)

	ASSIGN  shift 20
	.  error


state 17
	include_stmt : INCLUDE STRING_LIT .  (7)

	.  reduce 7


state 18
	sdecl : SPEC TYPE_ID LBRACE . RBRACE  (9)

	RBRACE  shift 21
	.  error


state 19
	cdecl : CLASS TYPE_ID ASSIGN . LBRACE cbody RBRACE  (10)

	LBRACE  shift 22
	.  error


state 20
	fdecl : DEF ID ASSIGN . LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (8)

	LPAREN  shift 23
	.  error


state 21
	sdecl : SPEC TYPE_ID LBRACE RBRACE .  (9)

	.  reduce 9


state 22
	cdecl : CLASS TYPE_ID ASSIGN LBRACE . cbody RBRACE  (10)
	cbody : .  (11)

	.  reduce 11

	cbody  goto 24


state 23
	fdecl : DEF ID ASSIGN LPAREN . formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (8)
	formals_opt : .  (35)

	ID  shift 25
	RPAREN  reduce 35

	formals_opt  goto 26
	formal_list  goto 27
	formal  goto 28


state 24
	cdecl : CLASS TYPE_ID ASSIGN LBRACE cbody . RBRACE  (10)
	cbody : cbody . field  (12)
	cbody : cbody . cfdecl  (13)
	scope : .  (44)

	RBRACE  shift 29
	PUBLIC  shift 30
	PRIVATE  shift 31
	VAR  reduce 44
	DEF  reduce 44

	field  goto 32
	cfdecl  goto 33
	scope  goto 34


state 25
	formal : ID . COLON datatype  (39)

	COLON  shift 35
	.  error


state 26
	fdecl : DEF ID ASSIGN LPAREN formals_opt . RPAREN COLON datatype LBRACE stmts RBRACE  (8)

	RPAREN  shift 36
	.  error


state 27
	formals_opt : formal_list .  (36)
	formal_list : formal_list . COMMA formal  (38)

	COMMA  shift 37
	RPAREN  reduce 36


state 28
	formal_list : formal .  (37)

	.  reduce 37


state 29
	cdecl : CLASS TYPE_ID ASSIGN LBRACE cbody RBRACE .  (10)

	.  reduce 10


state 30
	scope : PUBLIC .  (45)

	.  reduce 45


state 31
	scope : PRIVATE .  (46)

	.  reduce 46


state 32
	cbody : cbody field .  (12)

	.  reduce 12


state 33
	cbody : cbody cfdecl .  (13)

	.  reduce 13


state 34
	cfdecl : scope . DEF ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (14)
	field : scope . VAR ID COLON datatype SEMI  (31)

	VAR  shift 38
	DEF  shift 39
	.  error


state 35
	formal : ID COLON . datatype  (39)

	LPAREN  shift 40
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	.  error

	datatype  goto 47
	type_tag  goto 48
	array_type  goto 49
	function_type  goto 50
	primitive  goto 51
	object_type  goto 52


state 36
	fdecl : DEF ID ASSIGN LPAREN formals_opt RPAREN . COLON datatype LBRACE stmts RBRACE  (8)

	COLON  shift 53
	.  error


state 37
	formal_list : formal_list COMMA . formal  (38)

	ID  shift 25
	.  error

	formal  goto 54


state 38
	field : scope VAR . ID COLON datatype SEMI  (31)

	ID  shift 55
	.  error


state 39
	cfdecl : scope DEF . ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (14)

	ID  shift 56
	.  error


state 40
	function_type : LPAREN . formal_dtypes_list RPAREN ARROW datatype  (29)

	LPAREN  shift 40
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	.  error

	datatype  goto 57
	type_tag  goto 48
	array_type  goto 49
	function_type  goto 50
	primitive  goto 51
	object_type  goto 52
	formal_dtypes_list  goto 58
	formal_dtype  goto 59


state 41
	primitive : INT .  (20)

	.  reduce 20


state 42
	primitive : FLOAT .  (21)

	.  reduce 21


state 43
	primitive : BOOL .  (23)

	.  reduce 23


state 44
	primitive : CHAR .  (22)

	.  reduce 22


state 45
	primitive : UNIT .  (24)

	.  reduce 24


state 46
	object_type : TYPE_ID .  (25)

	.  reduce 25


state 47
	function_type : datatype . ARROW datatype  (30)
	formal : ID COLON datatype .  (39)

	ARROW  shift 60
	COMMA  reduce 39
	RPAREN  reduce 39


state 48
	datatype : type_tag .  (15)
	array_type : type_tag . LBRACKET brackets RBRACKET  (26)

	LBRACKET  shift 61
	COMMA  reduce 15
	SEMI  reduce 15
	RPAREN  reduce 15
	LBRACE  reduce 15
	ASSIGN  reduce 15
	ARROW  reduce 15


state 49
	datatype : array_type .  (16)

	.  reduce 16


state 50
	datatype : function_type .  (17)

	.  reduce 17


state 51
	type_tag : primitive .  (18)

	.  reduce 18


state 52
	type_tag : object_type .  (19)

	.  reduce 19


state 53
	fdecl : DEF ID ASSIGN LPAREN formals_opt RPAREN COLON . datatype LBRACE stmts RBRACE  (8)

	LPAREN  shift 40
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	.  error

	datatype  goto 62
	type_tag  goto 48
	array_type  goto 49
	function_type  goto 50
	primitive  goto 51
	object_type  goto 52


state 54
	formal_list : formal_list COMMA formal .  (38)

	.  reduce 38


state 55
	field : scope VAR ID . COLON datatype SEMI  (31)

	COLON  shift 63
	.  error


state 56
	cfdecl : scope DEF ID . ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (14)

	ASSIGN  shift 64
	.  error


state 57
	function_type : datatype . ARROW datatype  (30)
	formal_dtype : datatype .  (34)

	ARROW  shift 60
	COMMA  reduce 34
	RPAREN  reduce 34


state 58
	function_type : LPAREN formal_dtypes_list . RPAREN ARROW datatype  (29)
	formal_dtypes_list : formal_dtypes_list . COMMA formal_dtype  (33)

	COMMA  shift 65
	RPAREN  shift 66
	.  error


state 59
	formal_dtypes_list : formal_dtype .  (32)

	.  reduce 32


state 60
	function_type : datatype ARROW . datatype  (30)

	LPAREN  shift 40
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	.  error

	datatype  goto 67
	type_tag  goto 48
	array_type  goto 49
	function_type  goto 50
	primitive  goto 51
	object_type  goto 52


state 61
	array_type : type_tag LBRACKET . brackets RBRACKET  (26)
	brackets : .  (27)

	.  reduce 27

	brackets  goto 68


state 62
	fdecl : DEF ID ASSIGN LPAREN formals_opt RPAREN COLON datatype . LBRACE stmts RBRACE  (8)
	function_type : datatype . ARROW datatype  (30)

	LBRACE  shift 69
	ARROW  shift 60
	.  error


state 63
	field : scope VAR ID COLON . datatype SEMI  (31)

	LPAREN  shift 40
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	.  error

	datatype  goto 70
	type_tag  goto 48
	array_type  goto 49
	function_type  goto 50
	primitive  goto 51
	object_type  goto 52


state 64
	cfdecl : scope DEF ID ASSIGN . LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (14)

	LPAREN  shift 71
	.  error


state 65
	formal_dtypes_list : formal_dtypes_list COMMA . formal_dtype  (33)

	LPAREN  shift 40
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	.  error

	datatype  goto 57
	type_tag  goto 48
	array_type  goto 49
	function_type  goto 50
	primitive  goto 51
	object_type  goto 52
	formal_dtype  goto 72


state 66
	function_type : LPAREN formal_dtypes_list RPAREN . ARROW datatype  (29)

	ARROW  shift 73
	.  error


state 67
	function_type : datatype . ARROW datatype  (30)
	function_type : datatype ARROW datatype .  (30)

	ARROW  shift 60
	COMMA  reduce 30
	SEMI  reduce 30
	RPAREN  reduce 30
	LBRACE  reduce 30
	ASSIGN  reduce 30


state 68
	array_type : type_tag LBRACKET brackets . RBRACKET  (26)
	brackets : brackets . RBRACKET LBRACKET  (28)

	RBRACKET  shift 74
	.  error


state 69
	fdecl : DEF ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE . stmts RBRACE  (8)

	LPAREN  shift 75
	LBRACE  shift 76
	MINUS  shift 77
	NOT  shift 78
	TRUE  shift 79
	FALSE  shift 80
	IF  shift 81
	FOR  shift 82
	WHILE  shift 83
	RETURN  shift 84
	ANON  shift 85
	VAR  shift 86
	THIS  shift 87
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	INT_LIT  shift 88
	FLOAT_LIT  shift 89
	CHAR_LIT  shift 90
	STRING_LIT  shift 91
	ID  shift 92
	.  error

	stmts  goto 93
	type_tag  goto 94
	primitive  goto 51
	object_type  goto 52
	expr  goto 95
	literals  goto 96
	function_literal  goto 97
	stmt_list  goto 98
	stmt  goto 99


state 70
	function_type : datatype . ARROW datatype  (30)
	field : scope VAR ID COLON datatype . SEMI  (31)

	SEMI  shift 100
	ARROW  shift 60
	.  error


state 71
	cfdecl : scope DEF ID ASSIGN LPAREN . formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (14)
	formals_opt : .  (35)

	ID  shift 25
	RPAREN  reduce 35

	formals_opt  goto 101
	formal_list  goto 27
	formal  goto 28


state 72
	formal_dtypes_list : formal_dtypes_list COMMA formal_dtype .  (33)

	.  reduce 33


state 73
	function_type : LPAREN formal_dtypes_list RPAREN ARROW . datatype  (29)

	LPAREN  shift 40
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	.  error

	datatype  goto 102
	type_tag  goto 48
	array_type  goto 49
	function_type  goto 50
	primitive  goto 51
	object_type  goto 52


state 74
	array_type : type_tag LBRACKET brackets RBRACKET .  (26)
	brackets : brackets RBRACKET . LBRACKET  (28)

	LBRACKET  shift 103
	COMMA  reduce 26
	SEMI  reduce 26
	RPAREN  reduce 26
	LBRACE  reduce 26
	ASSIGN  reduce 26
	ARROW  reduce 26


state 75
	expr : LPAREN . expr RPAREN  (96)

	LPAREN  shift 75
	MINUS  shift 77
	NOT  shift 78
	TRUE  shift 79
	FALSE  shift 80
	ANON  shift 85
	THIS  shift 87
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	INT_LIT  shift 88
	FLOAT_LIT  shift 89
	CHAR_LIT  shift 90
	STRING_LIT  shift 91
	ID  shift 92
	.  error

	type_tag  goto 94
	primitive  goto 51
	object_type  goto 52
	expr  goto 104
	literals  goto 96
	function_literal  goto 97


state 76
	stmt : LBRACE . stmts RBRACE  (65)

	LPAREN  shift 75
	LBRACE  shift 76
	MINUS  shift 77
	NOT  shift 78
	TRUE  shift 79
	FALSE  shift 80
	IF  shift 81
	FOR  shift 82
	WHILE  shift 83
	RETURN  shift 84
	ANON  shift 85
	VAR  shift 86
	THIS  shift 87
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	INT_LIT  shift 88
	FLOAT_LIT  shift 89
	CHAR_LIT  shift 90
	STRING_LIT  shift 91
	ID  shift 92
	.  error

	stmts  goto 105
	type_tag  goto 94
	primitive  goto 51
	object_type  goto 52
	expr  goto 95
	literals  goto 96
	function_literal  goto 97
	stmt_list  goto 98
	stmt  goto 99


state 77
	expr : MINUS . expr  (94)

	LPAREN  shift 75
	MINUS  shift 77
	NOT  shift 78
	TRUE  shift 79
	FALSE  shift 80
	ANON  shift 85
	THIS  shift 87
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	INT_LIT  shift 88
	FLOAT_LIT  shift 89
	CHAR_LIT  shift 90
	STRING_LIT  shift 91
	ID  shift 92
	.  error

	type_tag  goto 94
	primitive  goto 51
	object_type  goto 52
	expr  goto 106
	literals  goto 96
	function_literal  goto 97


state 78
	expr : NOT . expr  (95)

	LPAREN  shift 75
	MINUS  shift 77
	NOT  shift 78
	TRUE  shift 79
	FALSE  shift 80
	ANON  shift 85
	THIS  shift 87
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	INT_LIT  shift 88
	FLOAT_LIT  shift 89
	CHAR_LIT  shift 90
	STRING_LIT  shift 91
	ID  shift 92
	.  error

	type_tag  goto 94
	primitive  goto 51
	object_type  goto 52
	expr  goto 107
	literals  goto 96
	function_literal  goto 97


state 79
	literals : TRUE .  (49)

	.  reduce 49


state 80
	literals : FALSE .  (50)

	.  reduce 50


state 81
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (66)
	stmt : IF . LPAREN expr RPAREN stmt  (71)

	LPAREN  shift 108
	.  error


state 82
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (72)

	LPAREN  shift 109
	.  error


state 83
	stmt : WHILE . LPAREN expr RPAREN stmt  (67)

	LPAREN  shift 110
	.  error


state 84
	stmt : RETURN . SEMI  (63)
	stmt : RETURN . expr SEMI  (64)

	SEMI  shift 111
	LPAREN  shift 75
	MINUS  shift 77
	NOT  shift 78
	TRUE  shift 79
	FALSE  shift 80
	ANON  shift 85
	THIS  shift 87
	INT  shift 41
	FLOAT  shift 42
	BOOL  shift 43
	CHAR  shift 44
	UNIT  shift 45
	TYPE_ID  shift 46
	INT_LIT  shift 88
	FLOAT_LIT  shift 89
	CHAR_LIT  shift 90
	STRING_LIT  shift 91
	ID  shift 92
	.  error

	type_tag  goto 94
	primitive  goto 51
	object_type  goto 52
	expr  goto 112
	literals  goto 96
	function_literal  goto 97


state 85
	function_literal : ANON . LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (56)

	LPAREN  shift 113
	.  error


state 86
	stmt : VAR . ID COLON datatype SEMI  (68)
	stmt : VAR . ID ASSIGN expr SEMI  (69)
	stmt : VAR . ID COLON datatype ASSIGN expr SEMI  (70)

	ID  shift 114
	.  error


state 87
	literals : THIS .  (55)

	.  reduce 55


state 88
	literals : INT_LIT .  (47)

	.  reduce 47


state 89
	literals : FLOAT_LIT .  (48)

	.  reduce 48


state 90
	literals : CHAR_LIT .  (51)

	.  reduce 51


state 91
	literals : STRING_LIT .  (52)

	.  reduce 52


state 92
	literals : ID .  (54)
	expr : ID . LPAREN actuals_opt RPAREN  (97)

	LPAREN  shift 115
	DOT  reduce 54
	COMMA  reduce 54
	SEMI  reduce 54
	RPAREN  reduce 54
	LBRACKET  reduce 54
	RBRACKET  reduce 54
	PLUS  reduce 54
	MINUS  reduce 54
	TIMES  reduce 54
	DIVIDE  reduce 54
	ASSIGN  reduce 54
	MODULO  reduce 54
	INCREMENT  reduce 54
	DECREMENT  reduce 54
	EQ  reduce 54
	NEQ  reduce 54
	LT  reduce 54
	LEQ  reduce 54
	GT  reduce 54
	GEQ  reduce 54
	AND  reduce 54
	OR  reduce 54


state 93
	fdecl : DEF ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts . RBRACE  (8)

	RBRACE  shift 116
	.  error


state 94
	expr : type_tag . bracket_args RBRACKET LPAREN RPAREN  (98)

	LBRACKET  shift 117
	.  error

	bracket_args  goto 118

